--- a/jimtcl/.gitignore
+++ b/jimtcl/.gitignore
@@ -1,21 +1,21 @@
-config.log
+#config.log
 tags
-/Makefile
-Tcl.html
-jimautoconf.h
-jimautoconfext.h
-jim-config.h
+#/Makefile
+#Tcl.html
+#jimautoconf.h
+#jimautoconfext.h
+#jim-config.h
 _*.c
-jim-stdlib.c
-jim-tclcompat.c
-jim-tree.c
-jim-oo.c
-jimsh
+#jim-stdlib.c
+#jim-tclcompat.c
+#jim-tree.c
+#jim-oo.c
+#jimsh
 *.exe
-libjim.a
+#libjim.a
 *.so.*
 *.dll
 *.o
-configure.gnu
-jimsh0
-build-jim-ext
+#configure.gnu
+#jimsh0
+#build-jim-ext
